--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -4,7 +4,7 @@ We would like to present an automated targeted SWATH analysis workflow for metab
 
 \subsection{Workflow}
 
-The workflow follows multiple steps (\ref{fig:pipline_overview}). Candidate identification - Feature detection, adduct grouping and accurate mass search are applied on DDA data. Library construction - Our tool for assay library construction was implemented using the OpenMS C++ library (\cite {OpenMS}). The knowledge determined from the DDA data, about the compound identification, its adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees (\cite{Duhrkop2019}) and extracts transitions to build an assay library. FDR estimation is based on the target-decoy approach. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. Targeted extraction involves chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. Statistical validation - FDR estimation uses the PyProphet algorithm (\cite{Teleman2015}). To make it compatible with metabolomics data, our target-decoy library approach was adopted to deal with compound information. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). Candidate identification - Feature detection, adduct grouping and accurate mass search are applied on DDA data. Library construction - Our tool for assay library construction was implemented using the OpenMS C++ library (\cite {OpenMS}). The knowledge determined from the DDA data, about the compound identification, its adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees (\cite{Duhrkop2019}) and extracts transitions to build an assay library. FDR estimation is based on the target-decoy approach. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. Targeted extraction involves chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. Statistical validation - FDR estimation uses the PyProphet algorithm (\cite{Teleman2015}). To make it compatible with metabolomics data, our target-decoy library approach was adopted to deal with compound information. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
 
 \begin{figure}[!t]
   \centering
@@ -173,7 +173,7 @@ These steps need to be followed to run the workflow successfully
 \textit{rt\_extraction\_window} & Extract x seconds around this value. \\
 \textit{rt\_normalization\_factor} &  lease use the range of your gradient e.g. 950 seconds. \\
 \end{tabular*}
-\end{center} \\
+\end{center} 
 
 \noindent In the workflow pyprophet is called after OpenSWATH, it merges the result files, which allows to get enough data for the model training. 
 
@@ -186,7 +186,7 @@ pyprophet merge  --template path_to_target-decoy_assay_library.pqp --out merged.
 \begin{lstlisting}
 pyprophet score --in  merged.osw  --out  scored.osw --level ms1ms2 --ss_main_score "var_isotope_correlation_score" --ss_score_filter metabolomics
 \end{lstlisting}
-\noindentExport the non filtered results: 
+\noindent Export the non filtered results: 
 
 \begin{lstlisting}
 pyprophet export-compound --in scored.osw --out scored + "_pyprophet_nofilter_ms1ms2.tsv" 
