--- a/Handout/isobaric.tex
+++ b/Handout/isobaric.tex
@@ -3,7 +3,7 @@
 
 \newpage
 \section{Isobaric analysis}
-In the last chapters, we identified and quantified peptides in a label-free experiment. In this section, we would like to introduce a possible workflow for the analysis of isobaric data. We have prepared and copied this workflow to the USB sticks. Please import \directory{Workflows > IIdentification\_quantification\_isobaric\_MSstatsTMT } into KNIME via the menu entry \menu{File > Import KNIME workflow > Select file} and double-click the imported workflow in order to open it. Before you can execute the workflow, you again have to correct the locations of the files in the \KNIMENODE{Input Files} nodes (don't forget the one for the FASTA database inside the ``ID'' meta node). Try and run your workflow by executing all nodes at once.
+In the last chapters, we identified and quantified peptides in a label-free experiment. In this section, we would like to introduce a possible workflow for the analysis of isobaric data. We have prepared and copied this workflow to the USB sticks. Please import \directory{Workflows > Identification\_quantification\_isobaric\_MSstatsTMT } into KNIME via the menu entry \menu{File > Import KNIME workflow > Select file} and double-click the imported workflow in order to open it. Before you can execute the workflow, you again have to correct the locations of the files in the \KNIMENODE{Input Files} nodes (don't forget the one for the FASTA database inside the ``ID'' meta node). Try and run your workflow by executing all nodes at once.
 
 
 \subsection{Workflow}
@@ -27,10 +27,10 @@ compatible version. Here, the R package MSstatsTMT can be used for further proce
 \subsubsection{Excursion MSstatsTMT}
 The R package MSstatsTMT can be used for protein significance analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling. MSstatsTMT provides functionality for two types of analysis: Protein summarization based on peptide quantification data and visualization and Model-based group comparison to detect significant changes in abundance. It depends on accurate feature detection, identification and quantification which can be performed e.g. by an OpenMS workflow. 
 
-\noindent In general MSstatsTMT can be used for data processing \& visualization, as well as statistical modeling. Please see ~\cite{Huang2020} and \url{http://msstats.org/msstatstmt/} for further information.
+\noindent In general MSstatsTMT can be used for data processing \& visualization, as well as statistical modeling. Please see~\cite{Huang2020} and \url{http://msstats.org/msstatstmt/} for further information.
 
 \subsubsection{Dataset}
-We will illustrate the experimental design and the analysis on a subset of the Plubell 2017 dataset (~\cite{Plubell2017}; PRIDE: \url{https://www.ebi.ac.uk/pride/archive/projects/PXD005953}), which is a multiplexed TMT labeling experiment to determine age and high fat diets specific proteome changes in mouse epididymal adipose tissue. It is fairly complex multiplexing 3 TMT experiments with 10 channels each (9 fractions each). 
+We will illustrate the experimental design and the analysis on a subset of the Plubell 2017 dataset (~\cite{Plubell2017}; PRIDE: \url{https://www.ebi.ac.uk/pride/archive/projects/PXD005953}), which is a 10-plexed TMT labeling experiment to determine age and high fat diets specific proteome changes in mouse epididymal adipose tissue. It is a fairly complex multiplexing experiment with one technical replicate of 3 different TMT mixtures having 9 fractions each. 
 
 \begin{figure}[htbp]
   \centering
@@ -39,13 +39,21 @@ We will illustrate the experimental design and the analysis on a subset of the P
   \label{fig:isobaric_dataset_plubell}
 \end{figure}
 
-\subsection{Experimental Design (TMT)}
-The experimental design for a TMT experiment is similar to a LFQ experiment. The difference is in the available channels and possible Mixtures. 
+\subsection{Experimental Design (isobaric labeling)}
+The experimental design for an isobaric labeling experiment is more complex than an LFQ experiment due to
+the additional sources of variation coming from runs of different \textit{mixtures} which assign
+peptide quantities (from reporter ions) to the different \textit{channels} of the labeling kit.
+In this example we can omit the "TechRepMixture" column since every mixture was only analysed once on
+the mass spectrometer. As there is only one "Condition" column allowed for MSstats, we use a concatenated
+identifier for the combinations of time and treatment.
+For a great explanation of the different columns and the reasons for their existence,
+see the following introductory video to MSstatsTMT:
+\url{https://youtu.be/3CDnrQxGLbA}
 
 \begin{table}[!ht]
 \centering
 \small
-\begin{tabular}{lllll}
+\begin{tabular}{0.95\textwidth}{lllll}
 Spectra\_Filepath                         & Fraction           & Label                 & Fraction\_Group  & Sample    \\
 PAMI-176\_Mouse\_A-J\_TMT\_14pctACN.mzML  & 1                  & 1                     & 1                & 1         \\
 PAMI-176\_Mouse\_A-J\_TMT\_14pctACN.mzML  & 1                  & 2                     & 1                & 2         \\
@@ -77,7 +85,12 @@ PAMI-194\_Mouse\_U-Dd\_TMT\_14pctACN.mzML & 1                  & 7              
 PAMI-194\_Mouse\_U-Dd\_TMT\_14pctACN.mzML & 1                  & 8                     & 3                & 28        \\
 PAMI-194\_Mouse\_U-Dd\_TMT\_14pctACN.mzML & 1                  & 9                     & 3                & 29        \\
 PAMI-194\_Mouse\_U-Dd\_TMT\_14pctACN.mzML & 1                  & 10                    & 3                & 30        \\
-&  &  &  & \\
+\end{tabular}
+\end{table}
+\begin{table}[!ht]
+\centering
+\small
+\begin{tabular}{0.95\textwidth}{lllll}
 Sample                                    & MSstats\_Condition & MSstats\_BioReplicate & MSstats\_Mixture & LabelName \\
 1                                         & Long\_LF           & 1                     & 1                & 126       \\
 2                                         & Long\_LF           & 2                     & 1                & 127N      \\
