Check parameters of the workflow

--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -565,7 +565,7 @@ year = {2017}
 
 @article{Huang2020,
 abstract = {MSstatsTMT: Protein Significance Analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling.},
-author = {Huang T, Choi M, Hao S, Vitek O},
+author = {Huang, T and Choi, M and Hao, S and Vitek, O},
 doi = {10.18129/B9.bioc.MSstatsTMT},
 journal = {},
 title = {{MSstatsTMT: Protein Significance Analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling.}},
