--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -623,4 +623,38 @@ volume = {32},
 year = {2014}
 }
 
+@ARTICLE{Elias2007,
+  title    = "Target-decoy search strategy for increased confidence in
+              large-scale protein identifications by mass spectrometry",
+  author   = "Elias, Joshua E and Gygi, Steven P",
+  abstract = "Liquid chromatography and tandem mass spectrometry (LC-MS/MS) has
+              become the preferred method for conducting large-scale surveys of
+              proteomes. Automated interpretation of tandem mass spectrometry
+              (MS/MS) spectra can be problematic, however, for a variety of
+              reasons. As most sequence search engines return results even for
+              'unmatchable' spectra, proteome researchers must devise ways to
+              distinguish correct from incorrect peptide identifications. The
+              target-decoy search strategy represents a straightforward and
+              effective way to manage this effort. Despite the apparent
+              simplicity of this method, some controversy surrounds its
+              successful application. Here we clarify our preferred methodology
+              by addressing four issues based on observed decoy hit
+              frequencies: (i) the major assumptions made with this database
+              search strategy are reasonable; (ii) concatenated target-decoy
+              database searches are preferable to separate target and decoy
+              database searches; (iii) the theoretical error associated with
+              target-decoy false positive (FP) rate measurements can be
+              estimated; and (iv) alternate methods for constructing decoy
+              databases are similarly effective once certain considerations are
+              taken into account.",
+  journal  = "Nat. Methods",
+  volume   =  4,
+  number   =  3,
+  pages    = "207--214",
+  month    =  mar,
+  year     =  2007,
+  language = "en"
+}
+
+
 
