--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -1,22 +1,20 @@
 \section{OpenSWATH for Metabolomics}
 \subsection{Introduction}
-We would like to present an automated targeted SWATH analysis workflow for metabolomics, which takes advantage of experiment specific target-decoy assay library generation. This allows for targeted extraction and statistical validation based on algorithms such as OpenSWATH and PyProphet (\cite{Rost2014}, \cite{Teleman2015}). 
+We would like to present an automated DIA/SWATH analysis workflow for metabolomics, which takes advantage of experiment specific target-decoy assay library generation. This allows for targeted extraction, scoring and statistical validation of metabolomics DIA data \cite{Rost2014}, \cite{Teleman2015}. 
 
 \subsection{Workflow}
 
-The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). Candidate identification - Feature detection, adduct grouping and accurate mass search are applied on DDA data. Library construction - Our tool for assay library construction was implemented using the OpenMS C++ library (\cite {OpenMS}). The knowledge determined from the DDA data, about the compound identification, its adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees (\cite{Duhrkop2019}) and extracts transitions to build an assay library. FDR estimation is based on the target-decoy approach. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. Targeted extraction involves chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. Statistical validation - FDR estimation uses the PyProphet algorithm (\cite{Teleman2015}). To make it compatible with metabolomics data, our target-decoy library approach was adopted to deal with compound information. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). \textbf{Candidate identification} - Feature detection, adduct grouping and accurate mass search are applied on DDA data. \textbf{Library construction} - The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library. Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. \textbf{Targeted extraction -} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. \textbf{Statistical validation} - FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
 
 \begin{figure}[!t]
   \centering
   \includegraphics[width=0.7\textwidth]{graphics/openswathmetabo/pipeline_overview.png}
-  \caption{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation. DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree rerooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data with algorithms based on OpenSWATH and PyProphet for targeted extraction and statistical validation (FDR estimation).}
+  \caption{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation. DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
   \label{fig:pipline_overview}
 \end{figure}
 
-%TODO: Referecen, where the workflow can be found
-
 \subsection{Prerequisites}
-Apart from the usual KNIME nodes, the workflow uses a lot of python scripting nodes. One basic requirement for the installation of python packages, in particular pyOpenMS, is a package manager for python. Using conda as an environment manger allows to specify a specific environment in the KNIME settings (\menu{File -> Preferences -> KNIME -> Python})
+Apart from the usual KNIME nodes, the workflow uses python scripting nodes. One basic requirement for the installation of python packages, in particular pyOpenMS, is a package manager for python. Using conda as an environment manger allows to specify a specific environment in the KNIME settings (\menu{File -> Preferences -> KNIME -> Python})
 
 \subsubsection{Windows}
 We suggest do use a virtual environment for the Python 3 installation on windows. 
@@ -89,11 +87,11 @@ Benchmark DIA samples were prepared by spiking different commercially available 
 \url{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Tutorials/Data/DIAMetAlyzer/}
 
 \subsection{Example Workflow}
-Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (\ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.0.1 executable, the DDA data (.mzML), custom libraries and adducts for AccurateMassSearch, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the AssayGeneratorMetabo. The constructed target library is used by the decoy generation node, which calls various python scripts to parse, reformat the input, call Passatutto and export the target-decoy assay library. The target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information
+Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.0.1 executable, the DDA data (.mzML), custom libraries and adducts for AccurateMassSearch, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the AssayGeneratorMetabo. The constructed target library is used by the decoy generation node, which calls various python scripts to parse, reformat the input, call Passatutto and export the target-decoy assay library. The target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information
 
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=0.9\textwidth]{graphics/openswathmetabo/example_wf.png}
+  \includegraphics[width=0.95\textwidth]{graphics/openswathmetabo/oswm_example_wf.png}
   \caption{Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME}
   \label{fig:oswm_example_wf}
 \end{figure}
@@ -102,10 +100,10 @@ Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (\ref{fig:o
 These steps need to be followed to run the workflow successfully
 
 \begin{itemize}
-\item Specify Input Files (.mzML).
+\item Add Input Files (.mzML).
 \item Specify SIRIUS 4.0.1 executable.
-\item Specify library files (mapping, struct) for AccurateMassSearch in each feature detection Metanode.
-\item Supply an output path for the SIRIUS workspace in the AssayGeneratorMetabo.
+\item Specify library files (mapping, struct) for \KNIMENODE{AccurateMassSearch}.
+\item Supply an output path for the SIRIUS workspace in the \KNIMENODE{AssayGeneratorMetabo}.
 \item Specify an output path and target-decoy library name (e.g. target-decoy-assaylib.pqp) (PATH to save Deocy Assay Library output).
 \item Input SWATH files (.mzML).
 \item Specify Path to pyprophet installation (PATH to pyprophet).
@@ -114,7 +112,7 @@ These steps need to be followed to run the workflow successfully
 \end{itemize}
 
 \subsection{Important parameters}
-\noindent Please have a look at the most important parameters, which should be tweaked to fit your data. In general, OpenMS has a lot of room for parameter optimization to best fit your chromatography and instrumental settings. Please be encouraged to play around!  \\
+\noindent Please have a look at the most important parameters, which should be tweaked to fit your data. In general, OpenMS has a lot of room for parameter optimization to best fit your chromatography and instrumental settings. \\
 
 \noindent\KNIMENODE{\textbf{FeatureFinderMetabo}}:
 \begin{center}
@@ -135,7 +133,7 @@ These steps need to be followed to run the workflow successfully
 \textbf{parameter} & \textbf{explanation} \\ \hline
 \textit{mass\_max\_diff} & Maximum allowed mass tolerance per feature.. \\
 \textit{potential\_adducts} & Adducts used to explain mass differences - These should fit to the adduct list specified for AccurateMassSearch. \\
-%\hl{\textit{algorithm $\rightarrow$ MetaboliteFeatureDeconvolution $\rightarrow$ mass\_max\_diff}} & Maximum allowed mass tolerance per feature.. \\
+%\hl{\textit{algorithm $\rightarrow$ MetaboliteFeatureDeconvolution $\rightarrow$ mass\_max\_diff}} & Maximum allowed mass tolerance per feature. \\
 %\hl{\textit{algorithm $\rightarrow$ MetaboliteFeatureDeconvolution $\rightarrow$ potential\_adducts}} & Adducts used to explain mass differences - These should fit to the adduct list specified for AccurateMassSearch. \\
 \end{tabular*}
 \end{center}
@@ -158,9 +156,9 @@ These steps need to be followed to run the workflow successfully
 \textit{max\_transitions} &  Maximal number of transitions (3). \\
 \textit{transitions\_threshold} & Further transitions need at least x\% of the maximum intensity. \\
 \textit{out\_workspace\_directory} & Output directory for SIRIUS workspace (Fragmentation Trees). \\
-\textit{filter\_by\_num\_masstraces} &  Features have to have at least x MassTraces. To use this parameter feature\_only is neccessaryh. \\
-\textit{precursor\_mass\_tolerance} & Tolerance window for precursor selection (Feature selection in regard to the precursor. \\
-\textit{precursor\_rt\_tolerance} & Tolerance allowed for accurate mass search. \\
+\textit{filter\_by\_num\_masstraces} &  Features have to have at least x MassTraces. To use this parameter feature\_only is neccessary. \\
+\textit{precursor\_mass\_tolerance} & Tolerance window for precursor selection (Feature selection in regard to the precursor). \\
+\textit{precursor\_rt\_tolerance} & Tolerance allowed for matching MS2 spectra depeding on the feature size (should be around the FWHM of the chromatograms). \\
 \textit{profile} & Specify the used analysis profile (e.g. qtof). \\
 \textit{elements} & Allowed elements for assessing the putative sumformula (e.g. CHNOP[5]S[8]Cl[1]). Elements found in the isotopic pattern are added automatically, but can be specified nonetheless. \\
 \end{tabular*}
@@ -171,7 +169,17 @@ These steps need to be followed to run the workflow successfully
 \begin{tabular*}{\textwidth}{ p{5.5cm}|p{10.5cm} }
 \textbf{parameter} & \textbf{explanation} \\ \hline
 \textit{rt\_extraction\_window} & Extract x seconds around this value. \\
-\textit{rt\_normalization\_factor} &  lease use the range of your gradient e.g. 950 seconds. \\
+\textit{rt\_normalization\_factor} &  Please use the range of your gradient e.g. 950 seconds. \\
+\end{tabular*}
+\end{center} 
+
+\noindent If you are analysing a lot of big DIA mzML files ~3-20GB per File, it makes sense to  change how OpenSWATH processes the spectra. 
+
+\begin{center}
+\begin{tabular*}{\textwidth}{ p{5.5cm}|p{10.5cm} }
+\textbf{parameter} & \textbf{explanation} \\ \hline
+\textit{readOptions} & Set cacheWorkingInMemory - will cache the files to disk and read SWATH-by-SWATH into memory\\
+\textit{tempDirectory} &  Set a directory, where cached mzMLs are stored (be aware that his directory can be quite huge depending on the data). \\
 \end{tabular*}
 \end{center} 
 
@@ -192,20 +200,9 @@ pyprophet score --in  merged.osw  --out  scored.osw --level ms1ms2 --ss_main_sco
 pyprophet export-compound --in scored.osw --out scored + "_pyprophet_nofilter_ms1ms2.tsv" 
 --max_rs_peakgroup_qvalue 1000.0
 \end{lstlisting}
-\noindent Please see the workflow for actual parameter values used for the benchmarking dataset. 
+\noindent Please see the workflow for actual parameter values used for the benchmarking dataset. \\
 
-\subsection{Use your own data}
-In addition, the workflow can be altered to fit your needs in terms of DDA input nodes and custom libraries! For example by reducing the number of input nodes, which need an individual custom library for AccurateMassSearch. It is possible to loop ofter the DDA reference files if one custom library is used in AccurateMassSearch for all files. 
 
-\subsection{Example Workflow}
-\begin{figure}[!h]
-  \centering
-  \includegraphics[width=0.9\textwidth]{graphics/openswathmetabo/loop_feautre.png}
-  \caption{}
-  \label{fig:pipline_overview}
-\end{figure}
-
-Please be aware that for assay library generation the annotated compound with the highest precursor intensity is chosen within all the files - if the same library is used for all of the files.   
-
+\noindent  The workflow can be used without any identification (remove \KNIMENODE{AccurateMassSearch}). Here, all features (known\_unknowns) are processed. The assay library is constructed based on the chemical composition elucidated via the fragment annotation. Quantification is possible, unfortunately the decoy generation and FDR estimation for this case is not yet available. 
 
 
